erDiagram
    direction LR

    WARUNG {
        uuid id PK
        text nama_warung
        decimal saldo_awal
    }

    BUKU_KAS {
        uuid id PK
        uuid warung_id FK
        timestamptz tanggal
        cash_flow_type tipe
        cash_flow_source sumber
        uuid reference_id
        text reference_type
        decimal amount
        decimal saldo_setelah
    }

    LAPORAN_HARIAN {
        uuid id PK
        uuid warung_id FK
        date tanggal
        decimal total_penjualan
        decimal total_pengeluaran_bisnis
        decimal total_pengeluaran_pribadi
        decimal total_hutang_baru
        decimal total_hutang_terbayar
        decimal profit
        int jumlah_transaksi
    }

    WARUNG ||--o{ BUKU_KAS : tracks
    WARUNG ||--o{ LAPORAN_HARIAN : summarizes
